fixing display flex on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -29,14 +29,14 @@ body {
 @media only screen and (min-width: 0px) {
   .App .container, .display .container, .How2Play .container {
     display: flex;
+    display: -ms-flexbox;
     display: -moz-flex;
-    display: -webkit-flex;  
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -webkit-box;
     flex-wrap: wrap;
     height: 100vh;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
     justify-content: center;
-    -webkit-align-content: center;
     align-content: center;
   } 
 }
